# oicompare

./: .clang-format  .editorconfig  .gitmodules  README.md  meson.build  oicompare.cc  oicompare.hh  print_format.hh  tester.cc  tests.hh  translations.hh
.github/workflows/: release-macos.yaml  release.yaml  test-macos.yaml  test.yaml
